## MODULE.bazel
module(
    name = "gz-fuel-tools",
    repo_name = "org_gazebosim_gz-fuel-tools",
)

bazel_dep(name = "curl", version = "8.8.0.bcr.3")
bazel_dep(name = "googletest", version = "1.15.2")
bazel_dep(name = "jsoncpp", version = "1.9.6")
bazel_dep(name = "libyaml", version = "0.2.5")
bazel_dep(name = "libzip", version = "1.11.4")
bazel_dep(name = "protobuf", version = "29.4", repo_name = "com_google_protobuf")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "tinyxml2", version = "10.0.0")

# Gazebo Dependencies
bazel_dep(name = "rules_gazebo", version = "0.0.3")
bazel_dep(name = "gz-common")
bazel_dep(name = "gz-math")
bazel_dep(name = "gz-msgs")
bazel_dep(name = "gz-utils")

archive_override(
    module_name = "gz-common",
    strip_prefix = "gz-common-gz-common7",
    urls = ["https://github.com/gazebosim/gz-common/archive/refs/heads/gz-common7.tar.gz"],
)

archive_override(
    module_name = "gz-math",
    strip_prefix = "gz-math-gz-math9",
    urls = ["https://github.com/gazebosim/gz-math/archive/refs/heads/gz-math9.tar.gz"],
)

archive_override(
    module_name = "gz-msgs",
    strip_prefix = "gz-msgs-gz-msgs12",
    urls = ["https://github.com/gazebosim/gz-msgs/archive/refs/heads/gz-msgs12.tar.gz"],
)

archive_override(
    module_name = "gz-utils",
    strip_prefix = "gz-utils-gz-utils4",
    urls = ["https://github.com/gazebosim/gz-utils/archive/refs/heads/gz-utils4.tar.gz"],
)
