<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>gz-fuel_tools9</name>
  <version>9.0.3</version>
  <description>Gazebo Fuel Tools: Classes and tools for interacting with Gazebo Fuel</description>
  <maintainer email="natekoenig@gmail.com">Nate Koenig</maintainer>
  <license>Apache License 2.0</license>
  <url type="website">https://github.com/gazebosim/gz-fuel-tools</url>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>gz-cmake3</build_depend>

  <depend>gz-common5</depend>
  <depend>gz-math7</depend>
  <depend>gz-msgs10</depend>
  <depend>gz-tools2</depend>
  <depend>gz-utils2</depend>
  <depend>libcurl-dev</depend>
  <depend>libgflags-dev</depend>
  <depend>libjsoncpp-dev</depend>
  <depend>libyaml-dev</depend>
  <depend>libzip-dev</depend>
  <depend>tinyxml2</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
